Updated Makefile to copy js files to Tile demo. Also updated tile js filenames to reflect updates.

--- a/demos/tile-game/index.html
+++ b/demos/tile-game/index.html
@@ -38,7 +38,7 @@
   <iframe class="source" src="game.html"></iframe>
   <button class="reanimate">Reanimate!</button>
   <iframe class="target" src="game.html?replay"></iframe>
-  <script src='js/jquery-1.8.3.js'></script>
+  <script src='js/reanimator-jquery.3.2.0.js'></script>
   <script>
     $(document).ready(function () {
       var source = window.sourceFrame = $('iframe.source')[0].contentWindow;
