--- a/demos/tile-game/game.html
+++ b/demos/tile-game/game.html
@@ -53,7 +53,7 @@
   </div>
   <div class="tile-container">
   </div>
-  <script src='js/jquery-1.8.3.js'></script>
+  <script src='js/reanimator-jquery.3.2.0.js'></script>
   <script src='js/main.js'></script>
 </body>
 </html>
